--- a/ECommerceAPI/appsettings.json
+++ b/ECommerceAPI/appsettings.json
@@ -1,8 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ECommerceDB;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
+  "InventoryApi": {
+    "BaseUrl": "https://localhost:7000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "ECommerceAPI": "Information"
     }
   },
   "AllowedHosts": "*"
